log
Sat 11 May 2024 10:19:31 PM UTC: 
 treemap.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
cb05f0d
Sat 11 May 2024 10:21:57 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  0|0
e6c5ad2
Sat 11 May 2024 10:48:21 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
f8ebe55
Sat 11 May 2024 10:49:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9c80954
Sat 11 May 2024 10:49:57 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
12b78f5
Sat 11 May 2024 10:51:58 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
d07fa99
Sat 11 May 2024 10:54:15 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
ac04b9a
Sat 11 May 2024 10:54:27 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c897554
Sat 11 May 2024 10:55:15 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
1d8737c
Sat 11 May 2024 11:03:10 PM UTC: 
 treemap.c | 19 +++++++++++--------
 1 file changed, 11 insertions(+), 8 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:79:5: error: expected identifier before ‘}’ token
   79 |     }
      |     ^
treemap.c:82:23: error: ‘parent’ undeclared (first use in this function)
   82 |     newNode->parent = parent;
      |                       ^~~~~~
treemap.c:82:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:86:36: error: ‘current’ undeclared (first use in this function); did you mean ‘auxCurrent’?
   86 |     else if (tree->lower_than(key, current->pair->key)){
      |                                    ^~~~~~~
      |                                    auxCurrent
Compilation failed
59af977
Sat 11 May 2024 11:03:44 PM UTC: 
 treemap.c | 54 +++++++++++++++++++++++++++---------------------------
 1 file changed, 27 insertions(+), 27 deletions(-)
 tests:  11|6
total_score: 15/70
c02b8ca
Sat 11 May 2024 11:10:09 PM UTC: 
 treemap.c | 49 ++++++++++++++++++++++---------------------------
 1 file changed, 22 insertions(+), 27 deletions(-)
 tests:  10|6
total_score: 15/70
3ae579c
Sat 11 May 2024 11:16:59 PM UTC: 
 treemap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  10|6
total_score: 15/70
933ff55
Sat 11 May 2024 11:22:27 PM UTC: 
 treemap.c | 40 ++++++++++++++++++++--------------------
 1 file changed, 20 insertions(+), 20 deletions(-)
 tests:  0|0
53656bd
Sat 11 May 2024 11:27:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
b5d19a4
